; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_link.c_bnx2x_8727_link_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_link.c_bnx2x_8727_link_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2x_phy = type { i32 }
%struct.link_params = type { %struct.bnx2x* }
%struct.bnx2x = type { i32 }

@MDIO_PMA_DEVAD = common dso_local global i32 0, align 4
@MDIO_PMA_LASI_CTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnx2x_phy*, %struct.link_params*)* @bnx2x_8727_link_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnx2x_8727_link_reset(%struct.bnx2x_phy* %0, %struct.link_params* %1) #0 {
  %3 = alloca %struct.bnx2x_phy*, align 8
  %4 = alloca %struct.link_params*, align 8
  %5 = alloca %struct.bnx2x*, align 8
  store %struct.bnx2x_phy* %0, %struct.bnx2x_phy** %3, align 8
  store %struct.link_params* %1, %struct.link_params** %4, align 8
  %6 = load %struct.link_params*, %struct.link_params** %4, align 8
  %7 = getelementptr inbounds %struct.link_params, %struct.link_params* %6, i32 0, i32 0
  %8 = load %struct.bnx2x*, %struct.bnx2x** %7, align 8
  store %struct.bnx2x* %8, %struct.bnx2x** %5, align 8
  %9 = load %struct.link_params*, %struct.link_params** %4, align 8
  %10 = load %struct.bnx2x_phy*, %struct.bnx2x_phy** %3, align 8
  %11 = call i32 @bnx2x_set_disable_pmd_transmit(%struct.link_params* %9, %struct.bnx2x_phy* %10, i32 1)
  %12 = load %struct.link_params*, %struct.link_params** %4, align 8
  %13 = load %struct.bnx2x_phy*, %struct.bnx2x_phy** %3, align 8
  %14 = call i32 @bnx2x_sfp_set_transmitter(%struct.link_params* %12, %struct.bnx2x_phy* %13, i32 0)
  %15 = load %struct.bnx2x*, %struct.bnx2x** %5, align 8
  %16 = load %struct.bnx2x_phy*, %struct.bnx2x_phy** %3, align 8
  %17 = load i32, i32* @MDIO_PMA_DEVAD, align 4
  %18 = load i32, i32* @MDIO_PMA_LASI_CTRL, align 4
  %19 = call i32 @bnx2x_cl45_write(%struct.bnx2x* %15, %struct.bnx2x_phy* %16, i32 %17, i32 %18, i32 0)
  ret void
}

declare dso_local i32 @bnx2x_set_disable_pmd_transmit(%struct.link_params*, %struct.bnx2x_phy*, i32) #1

declare dso_local i32 @bnx2x_sfp_set_transmitter(%struct.link_params*, %struct.bnx2x_phy*, i32) #1

declare dso_local i32 @bnx2x_cl45_write(%struct.bnx2x*, %struct.bnx2x_phy*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
